@startuml

class RimViewWindow {
  RimMdiWindowController mdiWindowGeometry()
}

note top of RimViewWindow : Updated 2017-02-24

class RimView {
}

RimViewWindow <|-- RimView

package plots {
RimViewWindow <|-- RimSummaryPlot
RimViewWindow <|-- RimTotalWellAllocationPlot
RimViewWindow <|-- RimWellAllocationPlot
RimViewWindow <|-- RimWellLogPlot
}

RimViewWindow *-- RimMdiWindowController

RimView <|-- RimEclipseView
RimView <|-- RimGeoMechView



@enduml
